    Wording: Russ Allbery <rra@debian.org>
    Seconded: Julien Cristau <jcristau@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Closes: #347581
  * Policy: Tighten requirements for maintainer-like fields
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Emilio Pozuelo Monfort <pochu@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Closes: #575639
  * Perl Policy: Change perlapi provides to use an ABI version
    Wording: Niko Tyni <ntyni@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Brendan O'Dea <bod@debian.org>
    Seconded: Damyan Ivanov <dmn@debian.org>
    Closes: #579457
  * Perl Policy: Recommend DESTDIR instead of PREFIX with Makefile.PL
    Wording: Niko Tyni <ntyni@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Raphael Hertzog <hertzog@debian.org>
    Closes: #579461
  * Standardize dpkg state wording and bring it in line with dpkg,
    renaming Failed-Config to Half-Configured and use uniform
    capitalization and punctuation.  (Closes: #442134)
  * Remove documentation of alternative changelog formats.  This feature
    is not allowed in the Debian archive and will be documented in the
    dpkg-dev documentation instead.  The documentation that was in Policy
    was also somewhat outdated.  (Closes: #555009, see #584141)
  * Remove obsolete footnote sentence saying that dpkg-statoverride is a
    new feature and not well-known.  (Closes: #563425)
  * Clarify in the Perl Policy that perl-base is essential, not perl, and
    don't imply packages need to depend on perl-base.  (Closes: #576594)
  * Document the special debian-installer section in the list of current
    sections and add a link to the list of sections in unstable, which
    contains longer descriptions.  (Closes: #577666)
  * Remove the footnote listing every architecture known to dpkg.  This
    list can be trivially produced by dpkg-architecture -L (already