@@ -10,8 +10,8 @@
 
   <articleinfo>
     <title>Configuration management</title>
-    <subtitle>Protocol version 2</subtitle>
-    <releaseinfo>Revision 7.0</releaseinfo>
+    <subtitle>Protocol version 2.1</subtitle>
+    <releaseinfo>Revision 7.1</releaseinfo>
     <author>
       <firstname>
         Wichert
